--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "react": "^17.0.1",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^17.0.1",
-    "react-player": "^2.11.0",
+    "react-dotenv": "^0.1.3",
+    "react-player": "^2.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-dotenv && scripts start",
+    "build": "react-dotenv && scripts build",
+    "test": "react-dotenv && scripts test",
+    "eject": "react-dotenv && scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +37,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_API_KEY",
+      "REACT_APP_API_URL"
     ]
   }
 }
